serviceconf-derive/tests/ui/option_with_default_trait.stderr
error: Option<T> fields cannot have default attribute (they default to None automatically)
  --> tests/ui/option_with_default_trait.rs:8:5
   |
 8 | /     /// This should produce a clear error
 9 | |     #[conf(default)]
10 | |     pub optional_field: Option<String>,
   | |______________________________________^
